examples/gatewayapi/bookstore.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore
  labels:
    app: bookstore
spec:
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      containers:
        - name: bookstore
          image: quay.io/3scale/authorino:echo-api
          ports:
            - containerPort: 3000
              name: http
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore
spec:
  selector:
    app: bookstore
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 3000
