examples/gatewayapi/carstore.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carstore
  labels:
    app: carstore
spec:
  selector:
    matchLabels:
      app: carstore
  template:
    metadata:
      labels:
        app: carstore
    spec:
      containers:
        - name: carstore
          image: quay.io/3scale/authorino:echo-api
          ports:
            - containerPort: 3000
              name: http
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: carstore
<<<<<<< Updated upstream
  annotations:
    discovery.kuadrant.io/matchpath: "/api/v1/cars"
  labels:
    discovery.kuadrant.io/enabled: "true"        
=======
>>>>>>> Stashed changes
spec:
  selector:
    app: carstore
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 3000
